--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,15 @@
         android:text="跳转"
         android:textColor="@color/myColorText" />
 
+    <Button
+        android:id="@+id/btn_socket"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:background="@color/myBg"
+        android:text="socket测试"
+        android:textColor="@color/myColorText" />
+
     <ImageView
         android:id="@+id/iv"
         android:layout_width="wrap_content"
