--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -24,9 +24,27 @@
         android:layout_height="wrap_content"
         android:text="获取密码"/>
 
+    <Button
+        android:layout_marginTop="10dp"
+        android:id="@+id/btn_create_service"
+        android:textColor="@color/myColorText"
+        android:background="@color/myBg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="新进程服务"/>
+
+    <Button
+        android:layout_marginTop="10dp"
+        android:id="@+id/btn_aty3"
+        android:textColor="@color/myColorText"
+        android:background="@color/myBg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="AIDL测试"/>
+
     <ExpandableListView
         android:id="@+id/expanded_rcy"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ExpandableListView>
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
